qooauth/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qooauth
  labels:
    app.kubernetes.io/part-of: qoobot
    app.kubernetes.io/component: auth
    istio-injection: enabled
